@@ -14,7 +14,6 @@ public class CoffeeOrderBoardTest {
     private static final String[] CUSTOMER_NAMES = {"Alice", "Bob", "Charlie", "David", "Emma", "Frank", "Grace", "Hannah", "Isabella", "Jack", "Kevin", "Liam", "Mia", "Noah",
             "Olivia", "William", "Ava", "James", "Sophia", "Benjamin", "Charlotte", "Elijah", "Amelia", "Lucas", "Harper", "Mason", "Evelyn", "Logan", "Aria", "Alexander", "Abigail"};
 
-
     @BeforeEach
     void setUp() {
         coffeeOrderBoard = new CoffeeOrderBoard();
@@ -23,45 +22,42 @@ public class CoffeeOrderBoardTest {
     @Test
     @DisplayName("addOrder should add order")
     void addOrder_shouldAddOrder() {
-        Order order = new Order(1, "Alice");
-        coffeeOrderBoard.addOrder(order);
-        assertEquals(List.of(order), coffeeOrderBoard.getOrders());
+        coffeeOrderBoard.addOrder("Alice");
+        assertEquals(List.of(new Order(1, "Alice")), coffeeOrderBoard.getOrders());
     }
 
     @Test
     @DisplayName("addOrder should update order when order exists")
     void addOrder_shouldUpdateOrder_whenOrderExists() {
-        Order order1 = new Order(1, "Alice");
-        Order order2 = new Order(2, "Bob");
-        coffeeOrderBoard.addOrder(order1);
-        coffeeOrderBoard.addOrder(order2);
+        coffeeOrderBoard.addOrder("Alice");
+        coffeeOrderBoard.addOrder("Bob");
 
-        Order updatedOrder = new Order(3, "Alice");
-        coffeeOrderBoard.addOrder(updatedOrder);
+        coffeeOrderBoard.addOrder("Alice");
 
-        assertEquals(List.of(updatedOrder, order2), coffeeOrderBoard.getOrders());
+        List<Order> expectedOrders = Arrays.asList(
+                new Order(1, "Alice"),
+                new Order(2, "Bob")
+        );
+        List<Order> actualOrders = coffeeOrderBoard.getOrders();
+        assertEquals(expectedOrders, actualOrders);
     }
 
     @Test
-    @DisplayName("addOrder should add order when order does not exist")
+    @DisplayName("deliver should remove order")
     void deliver_shouldRemoveOrder() {
-        Order order1 = new Order(1, "Alice");
-        Order order2 = new Order(2, "Bob");
-        coffeeOrderBoard.addOrder(order1);
-        coffeeOrderBoard.addOrder(order2);
+        coffeeOrderBoard.addOrder("Alice");
+        coffeeOrderBoard.addOrder("Bob");
 
         coffeeOrderBoard.deliver(1);
 
-        assertEquals(List.of(order2), coffeeOrderBoard.getOrders());
+        assertEquals(List.of(new Order(2, "Bob")), coffeeOrderBoard.getOrders());
     }
 
     @Test
     @DisplayName("displayOrders should return orders as string")
     void displayOrders_shouldReturnOrdersAsString() {
-        Order order1 = new Order(1, "Alice");
-        Order order2 = new Order(2, "Bob");
-        coffeeOrderBoard.addOrder(order1);
-        coffeeOrderBoard.addOrder(order2);
+        coffeeOrderBoard.addOrder("Alice");
+        coffeeOrderBoard.addOrder("Bob");
 
         String expected = "=============\nNum | Name\n1 | Alice\n2 | Bob\n";
         assertEquals(expected, coffeeOrderBoard.displayOrders());
@@ -70,12 +66,10 @@ public class CoffeeOrderBoardTest {
     @Test
     @DisplayName("getNextOrder should return first order")
     void getNextOrder_shouldReturnFirstOrder() {
-        Order order1 = new Order(1, "Alice");
-        Order order2 = new Order(2, "Bob");
-        coffeeOrderBoard.addOrder(order1);
-        coffeeOrderBoard.addOrder(order2);
+        coffeeOrderBoard.addOrder("Alice");
+        coffeeOrderBoard.addOrder("Bob");
 
-        assertEquals(order1, coffeeOrderBoard.getNextOrder());
+        assertEquals(new Order(1, "Alice"), coffeeOrderBoard.getNextOrder());
     }
 
     @Test
@@ -85,18 +79,18 @@ public class CoffeeOrderBoardTest {
     }
 
     @Test
-    @DisplayName("getOrders should return orders")
+    @DisplayName("addOrder should add multiple orders")
     void addOrder_shouldAddMultipleOrders() {
+        coffeeOrderBoard.addOrder(CUSTOMER_NAMES[0]);
+        coffeeOrderBoard.addOrder(CUSTOMER_NAMES[1]);
+        coffeeOrderBoard.addOrder(CUSTOMER_NAMES[2]);
 
-        Order order1 = new Order(1, CUSTOMER_NAMES[0]);
-        Order order2 = new Order(2, CUSTOMER_NAMES[1]);
-        Order order3 = new Order(3, CUSTOMER_NAMES[2]);
+        List<Order> expectedOrders = Arrays.asList(
+                new Order(1, CUSTOMER_NAMES[0]),
+                new Order(2, CUSTOMER_NAMES[1]),
+                new Order(3, CUSTOMER_NAMES[2])
+        );
 
-        coffeeOrderBoard.addOrder(order1);
-        coffeeOrderBoard.addOrder(order2);
-        coffeeOrderBoard.addOrder(order3);
-
-        List<Order> expectedOrders = Arrays.asList(order1, order2, order3);
         List<Order> actualOrders = coffeeOrderBoard.getOrders();
         assertEquals(expectedOrders, actualOrders);
     }
@@ -104,17 +98,17 @@ public class CoffeeOrderBoardTest {
     @Test
     @DisplayName("deliver should remove order when multiple orders")
     void deliver_shouldRemoveOrder_whenMultipleOrders() {
-
-        Order order1 = new Order(1, CUSTOMER_NAMES[0]);
-        Order order2 = new Order(2, CUSTOMER_NAMES[1]);
-        Order order3 = new Order(3, CUSTOMER_NAMES[2]);
-        coffeeOrderBoard.addOrder(order1);
-        coffeeOrderBoard.addOrder(order2);
-        coffeeOrderBoard.addOrder(order3);
+        coffeeOrderBoard.addOrder(CUSTOMER_NAMES[0]);
+        coffeeOrderBoard.addOrder(CUSTOMER_NAMES[1]);
+        coffeeOrderBoard.addOrder(CUSTOMER_NAMES[2]);
 
         coffeeOrderBoard.deliver(2);
 
-        List<Order> expectedOrders = Arrays.asList(order1, order3);
+        List<Order> expectedOrders = Arrays.asList(
+                new Order(1, CUSTOMER_NAMES[0]),
+                new Order(3, CUSTOMER_NAMES[2])
+        );
+
         List<Order> actualOrders = coffeeOrderBoard.getOrders();
         assertEquals(expectedOrders, actualOrders);
     }
